Fix z-index of nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,7 @@ header {
   overflow: hidden;
   height: 0;
   transition: transform 0.5s ease;
+  z-index: 1000;
 }
 
 .nav__item {
@@ -795,7 +796,7 @@ header {
   }
 
   100% {
-    opacity: 0.95;
+    opacity: .9;
     height: 100vh;
   }
 }
